--- a/unpacked/html/popupLogin.html
+++ b/unpacked/html/popupLogin.html
@@ -3,10 +3,10 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <title>Create T411 connexion</title>
-    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/login.css">
-    <script src="jquery.min.js"></script>
-    <script src="js/login.js"></script>
+    <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/login.css">
+    <script src="../js/jquery.min.js"></script>
+    <script src="../js/login.js"></script>
   </head>
   <body>
     <p><img src="https://www.t411.me/themes/blue/images/logo.png" /></p>
